Connected report user to backend
